Cleaned up the files just a little bit

--- a/src/client/contact.html
+++ b/src/client/contact.html
@@ -18,11 +18,6 @@ Description: This is my contact page!
     <link rel="icon" type="image/x-icon" href="img/Poké_Ball_icon.png">
     <link rel="stylesheet" href="../../node_modules/@fortawesome/fontawesome-free/css/all.min.css">
     <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css">
- 
- 	<!-- JavaScript Files. -->
-    <!-- removed the bootstrap one and put it at the bottom. -->
-    <script type="module" src="app/app.js"></script>
-    <script type="module" src="app/animals/create.js"></script>
   </head>
   
   <!-- The nav bar stuff!-->
@@ -130,7 +125,10 @@ Description: This is my contact page!
       <p class="float-end"><a href="#">Back to top</a></p>
       <p>&copy; <span id="copyright"></span> Alyssa Bhagwandin. &middot; <a href="privacy-policy.html">Privacy</a> &middot; <a href="terms.html">Terms</a></p>
     </footer>
+    <!-- JavaScript Files -->
     <!-- Added this becuase the instructions said to put it at the bottom. -->
     <script src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="module" src="app/app.js"></script>
+    <script type="module" src="app/animals/create.js" ></script>
   </body>
 </html>
