--- a/src/client/privacy-policy.html
+++ b/src/client/privacy-policy.html
@@ -16,18 +16,10 @@ Description: This is my privacy page!
     <link rel="stylesheet" href="css/style.css">
 
     <link rel="icon" type="image/x-icon" href="img/Poké_Ball_icon.png">
-
     
     <link rel="stylesheet" href="../../node_modules/@fortawesome/fontawesome-free/css/all.min.css">
-    <!--THE OLD ONE:  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet"> -->
 
     <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <!--THE OLD ONE:  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> -->
-    
-    <!-- removed the bootstrap one and put it at the bottom. -->
-    <script type="module" src="app/app.js"></script>
-    <script type="module" src="app/animals/create.js"></script>
-
   </head>
   
 <!-- The nav bar stuff!-->
@@ -95,7 +87,10 @@ Description: This is my privacy page!
       <p class="float-end"><a href="#">Back to top</a></p>
       <p>&copy; <span id="copyright"></span> Alyssa Bhagwandin. &middot; <a href="privacy-policy.html">Privacy</a> &middot; <a href="terms.html">Terms</a></p>
     </footer>
+    <!-- JavaScript Files -->
     <!-- Added this becuase the instructions said to put it at the bottom. -->
     <script src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="module" src="app/app.js"></script>
+    <script type="module" src="app/animals/create.js" ></script>
   </body>
 </html>
