--- a/src/client/about.html
+++ b/src/client/about.html
@@ -18,11 +18,6 @@ Description: This is my about page!
     <link rel="icon" type="image/x-icon" href="img/Poké_Ball_icon.png">
     <link rel="stylesheet" href="../../node_modules/@fortawesome/fontawesome-free/css/all.min.css">
     <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css">
- 
-    <!-- JavaScript Files -->
-    <!-- moved Bootstrap JS to the bottom of the body -->
-    <script type="module" src="app/app.js"></script>
-    <script type="module" src="app/animals/create.js"></script>
   </head>
   
   <body>
@@ -114,8 +109,10 @@ Description: This is my about page!
       <p class="float-end"><a href="#">Back to top</a></p>
       <p>&copy; <span id="copyright"></span> Alyssa Bhagwandin. &middot; <a href="privacy-policy.html">Privacy</a> &middot; <a href="terms.html">Terms</a></p>
     </footer>
-
-    <!-- JavaScript -->
+    <!-- JavaScript Files -->
+    <!-- Added this becuase the instructions said to put it at the bottom. -->
     <script src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="module" src="app/app.js"></script>
+    <script type="module" src="app/animals/create.js" ></script>
   </body>
 </html>
