Final touches on assignment 1

--- a/src/client/about.html
+++ b/src/client/about.html
@@ -24,108 +24,110 @@ Description: This is my about page!
   <body>
   
   <!-- The nav bar stuff!-->
-  <header>
-    <nav class="navbar navbar-expand-md fixed-top custom-navbar ">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="index.html"> Joystick Junkies</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-          <ul class="navbar-nav me-auto mb-2 mb-md-0">
-            <li class="nav-item">
-              <a class="nav-link" href="search.html"><i class="fa-solid fa-gamepad"></i> Shop</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="create.html"><i class="fa-solid fa-cubes"></i> Add Stock</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="about.html"><i class="fas fa-info-circle"></i> About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html"><i class="fas fa-envelope"></i> Contact</a>
-            </li>
-          </ul>
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="#"><i class="fa-solid fa-cart-shopping"></i> Cart</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-  </header>
+    <header>
+      <nav class="navbar navbar-expand-md fixed-top custom-navbar ">
+          <a class="navbar-brand" href="index.html"> Joystick Junkies</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarCollapse">
+            <ul class="navbar-nav me-auto mb-2 mb-md-0">
+              <li class="nav-item">
+                <a class="nav-link" href="search.html"><i class="fa-solid fa-gamepad"></i> Shop</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="create.html"><i class="fa-solid fa-cubes"></i> Add Stock</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="about.html"><i class="fas fa-info-circle"></i> About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html"><i class="fas fa-envelope"></i> Contact</a>
+              </li>
+            </ul>
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="#"><i class="fa-solid fa-cart-shopping"></i> Cart</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </header>
 
-  <!-- Main Content -->
-  <main class="flex-shrink-0">
-    <div class="container py-5">
-      <div class="row">
-        <!-- Image Section -->
-        <div class="col-md-4 text-center">
-          <img src="img/profilePic.jpg" alt="Profile Picture" class="img-fluid rounded-circle mb-4">
-        </div>
-        <!-- Text Section -->
-        <div class="col-md-8">
-            <h1 class="mt-4">About Me</h1>
-            <p class="lead">Hi! My name is Alyssa Bhagwandin</p>
-            <p> I was born in Canada, but my heritage is a blend of Guyanese and Indian roots. I am currently pursuing a degree in Computer Programming at Durham College, where I’m nurturing my passion for designing innovative solutions and creating impactful software.</p>
-            <p> After graduation, I aspire to build a career as a software developer or game designer. The idea of combining creativity with technology excites me. Crafting experiences that entertain, inspire, and address real world challenges is my ultimate goal. </p>
-            <h2>About Joystick Junkies</h2>
-            <p>Welcome to Joystick Junkies, the ultimate shop for gaming enthusiasts! From retro classics to modern reimaginings, and accessories that elevate your gaming setup, we’ve got it all. Whether you're looking to relive the nostalgia of vintage games or gear up for your next adventure, Joystick Junkies is your go-to destination.</p>
+    <!-- Main Content -->
+    <main class="flex-shrink-0">
+      <div class="container">
+        <div class="row">
+          <!-- Image Section -->
+          <div class="col-md-4 text-center">
+            <img src="img/profilePic.jpg" alt="Profile Picture" class="img-fluid rounded-circle mb-4">
+          </div>
+          <!-- Text Section -->
+          <div class="col-md-8">
+              <h1 class="mt-4">About Me</h1>
+              <p class="lead">Hi! My name is Alyssa Bhagwandin</p>
+              <p> I was born in Canada, but my heritage is a blend of Guyanese and Indian roots. I am currently pursuing a degree in Computer Programming at Durham College, where I’m nurturing my passion for designing innovative solutions and creating impactful software.</p>
+              <p> After graduation, I aspire to build a career as a software developer or game designer. The idea of combining creativity with technology excites me. Crafting experiences that entertain, inspire, and address real world challenges is my ultimate goal. </p>
+              <h2>About Joystick Junkies</h2>
+              <p>Welcome to Joystick Junkies, the ultimate shop for gaming enthusiasts! From retro classics to modern reimaginings, and accessories that elevate your gaming setup, we’ve got it all. Whether you're looking to relive the nostalgia of vintage games or gear up for your next adventure, Joystick Junkies is your go-to destination.</p>
+          </div>
         </div>
 
-        <!-- Accordion Section -->
-        <div class="accordion my-5" id="aboutAccordion">
-          <div class="accordion-item">
-            <h2 class="accordion-header">
-              <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                How do I find my favorite retro games?
-              </button>
-            </h2>
-            <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#aboutAccordion">
-              <div class="accordion-body">
-                Use the "Shop" page to browse our collection of classic games, consoles, and accessories. You can also use the search bar to find specific titles from your childhood!
+          <!-- Accordion Section -->
+          <div class="accordion my-5" id="aboutAccordion">
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  How do I find my favorite retro games?
+                </button>
+              </h2>
+              <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#aboutAccordion">
+                <div class="accordion-body">
+                  Use the "Shop" page to browse our collection of classic games, consoles, and accessories. You can also use the search bar to find specific titles from your childhood!
+                </div>
               </div>
             </div>
+
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                  Do you sell original or refurbished games?
+                </button>
+              </h2>
+              <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#aboutAccordion">
+                <div class="accordion-body">
+                  We offer a mix of original cartridges, discs, and refurbished classics that have been tested for quality. Each listing includes details on the game’s condition.
+                </div>
+              </div>
           </div>
 
           <div class="accordion-item">
             <h2 class="accordion-header">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                Do you sell original or refurbished games?
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                Can I suggest a game or request a rare title?
               </button>
             </h2>
-            <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#aboutAccordion">
+            <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#aboutAccordion">
               <div class="accordion-body">
-                We offer a mix of original cartridges, discs, and refurbished classics that have been tested for quality. Each listing includes details on the game’s condition.
+                Absolutely! If you’re looking for a specific game, let us know through the "Contact" page. We’re always on the hunt for rare and nostalgic titles to add to our collection.
               </div>
-            </div>
-        </div>
-
-        <div class="accordion-item">
-          <h2 class="accordion-header">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-              Can I suggest a game or request a rare title?
-            </button>
-          </h2>
-          <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#aboutAccordion">
-            <div class="accordion-body">
-              Absolutely! If you’re looking for a specific game, let us know through the "Contact" page. We’re always on the hunt for rare and nostalgic titles to add to our collection.
             </div>
           </div>
         </div>
       </div>
+    </main>
 
-      <!-- Footer -->
-      <footer class="container">
-        <p class="float-end"><a href="#">Back to top</a></p>
-        <p>&copy; <span id="copyright"></span> Alyssa Bhagwandin. &middot; <a href="privacy-policy.html">Privacy</a> &middot; <a href="terms.html">Terms</a></p>
-      </footer>
-      <!-- JavaScript Files. -->
-      <script rel="stylesheet" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-      <script type="module" src="app/app.js"></script>
-      <script type="module" src="app/products/create.js"></script>
-      <script type="module" src="app/products/product.js"></script>
-      <script type="module" src="app/products/product.mock.service.js"></script>
-  </body>
+    <!-- Footer -->
+    <footer class="container">
+      <p class="float-end"><a href="#">Back to top</a></p>
+      <p>&copy; <span id="copyright"></span> Alyssa Bhagwandin. &middot; <a href="privacy-policy.html">Privacy</a> &middot; <a href="terms.html">Terms</a></p>
+    </footer>
+
+    <!-- JavaScript Files. -->
+    <script rel="stylesheet" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="module" src="app/app.js"></script>
+    <script type="module" src="app/products/create.js"></script>
+    <script type="module" src="app/products/product.js"></script>
+    <script type="module" src="app/products/product.mock.service.js"></script>
+</body>
 </html>
