--- a/src/client/contact.html
+++ b/src/client/contact.html
@@ -19,43 +19,42 @@ Description: This is my contact page!
     <link rel="icon" type="image/x-icon" href="img/control.png">
     <link rel="stylesheet" href="../../node_modules/@fortawesome/fontawesome-free/css/all.min.css">
     <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css">
-
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
-    <script rel="stylesheet" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   
-  <!-- The nav bar stuff!-->
-  <header>
-    <nav class="navbar navbar-expand-md fixed-top custom-navbar ">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="index.html"> Joystick Junkies</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-          <ul class="navbar-nav me-auto mb-2 mb-md-0">
-            <li class="nav-item">
-              <a class="nav-link" href="search.html"><i class="fa-solid fa-gamepad"></i> Shop</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="create.html"><i class="fa-solid fa-cubes"></i> Add Stock</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="about.html"><i class="fas fa-info-circle"></i> About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="contact.html"><i class="fas fa-envelope"></i> Contact</a>
-            </li>
-          </ul>
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="#"><i class="fa-solid fa-cart-shopping"></i> Cart</a>
-            </li>
-          </ul>
+  <body>
+    <!-- The nav bar stuff!-->
+    <header>
+      <nav class="navbar navbar-expand-md fixed-top custom-navbar ">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="index.html"> Joystick Junkies</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarCollapse">
+            <ul class="navbar-nav me-auto mb-2 mb-md-0">
+              <li class="nav-item">
+                <a class="nav-link" href="search.html"><i class="fa-solid fa-gamepad"></i> Shop</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="create.html"><i class="fa-solid fa-cubes"></i> Add Stock</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="about.html"><i class="fas fa-info-circle"></i> About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="contact.html"><i class="fas fa-envelope"></i> Contact</a>
+              </li>
+            </ul>
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="#"><i class="fa-solid fa-cart-shopping"></i> Cart</a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </nav>
-  </header>
+      </nav>
+    </header>
 
 
     <!-- Main Content -->
@@ -91,47 +90,47 @@ Description: This is my contact page!
               </div>
             </div>
 
-        <!-- Join Our Community -->
-        <div class="row mt-5">
-          <div class="col-md-12 text-center">
-            <h3><i class="fas fa-users"></i> Join the Joystick Junkies Community</h3>
-            <p>
-              Follow us on social media to stay updated on the latest retro gaming news, product launches, and community events.
-            </p>
-            <ul class="list-inline">
-              <li class="list-inline-item">
-                <a href="https://facebook.com" target="_blank" class="btn btn-primary">
-                  <i class="fab fa-facebook-f"></i> Facebook
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="https://twitter.com" target="_blank" class="btn btn-info">
-                  <i class="fab fa-twitter"></i> Twitter
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="https://instagram.com" target="_blank" class="btn btn-danger">
-                  <i class="fab fa-instagram"></i> Instagram
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="https://twitch.tv" target="_blank" class="btn btn-purple">
-                  <i class="fab fa-twitch"></i> Twitch
-                </a>
-              </li>
-            </ul>
+            <!-- Join Our Community -->
+            <div class="row mt-5">
+              <div class="col-md-12 text-center">
+                <h3><i class="fas fa-users"></i> Join the Joystick Junkies Community</h3>
+                <p>
+                  Follow us on social media to stay updated on the latest retro gaming news, product launches, and community events.
+                </p>
+                <ul class="list-inline">
+                  <li class="list-inline-item">
+                    <a href="https://facebook.com" target="_blank" class="btn btn-primary">
+                      <i class="fab fa-facebook-f"></i> Facebook
+                    </a>
+                  </li>
+                  <li class="list-inline-item">
+                    <a href="https://twitter.com" target="_blank" class="btn btn-info">
+                      <i class="fab fa-twitter"></i> Twitter
+                    </a>
+                  </li>
+                  <li class="list-inline-item">
+                    <a href="https://instagram.com" target="_blank" class="btn btn-danger">
+                      <i class="fab fa-instagram"></i> Instagram
+                    </a>
+                  </li>
+                  <li class="list-inline-item">
+                    <a href="https://twitch.tv" target="_blank" class="btn btn-purple">
+                      <i class="fab fa-twitch"></i> Twitch
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
-    </main>
+      </main>
 
-    <!-- Footer -->
-    <footer class="container">
-      <p class="float-end"><a href="#">Back to top</a></p>
-      <p>&copy; <span id="copyright"></span> Alyssa Bhagwandin. &middot; <a href="privacy-policy.html">Privacy</a> &middot; <a href="terms.html">Terms</a></p>
-    </footer>
-    <!-- JavaScript Files. -->
-    <script rel="stylesheet" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script type="module" src="app/app.js"></script>
-
+      <!-- Footer -->
+      <footer class="container">
+        <p class="float-end"><a href="#">Back to top</a></p>
+        <p>&copy; <span id="copyright"></span> Alyssa Bhagwandin. &middot; <a href="privacy-policy.html">Privacy</a> &middot; <a href="terms.html">Terms</a></p>
+      </footer>
+      <!-- JavaScript Files. -->
+      <script rel="stylesheet" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+      <script type="module" src="app/app.js"></script>
+  </body>
 </html>
