--- a/src/client/privacy-policy.html
+++ b/src/client/privacy-policy.html
@@ -56,6 +56,7 @@ Description: This is my privacy page!
     </nav>
   </header>
 
+  <!-- The main information stuff. this is all some random stuff. -->
   <main class="card shadow-sm mt-5">
     <div class="card-body">
       <h1 class="card-title">Privacy Policy</h1>
