--- a/src/client/index.html
+++ b/src/client/index.html
@@ -25,7 +25,7 @@ Description: This is my main page!
     <script rel="stylesheet" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   </head>
 
-<!-- The nav bar stuff!-->
+  <!-- The nav bar stuff!-->
   <header>
     <nav class="navbar navbar-expand-md fixed-top custom-navbar ">
       <div class="container-fluid">
@@ -58,7 +58,7 @@ Description: This is my main page!
     </nav>
   </header>
 
-
+  <!-- carousel images and all of the words inside of the slides. -->
   <div id="myCarousel" class="carousel slide mb-6" data-bs-ride="carousel">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
