--- a/src/client/terms.html
+++ b/src/client/terms.html
@@ -18,7 +18,6 @@ Description: This is my privacy page!
     <link rel="icon" type="image/x-icon" href="img/control.png">
     <link rel="stylesheet" href="../../node_modules/@fortawesome/fontawesome-free/css/all.min.css">
     <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css">
-
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
     <script rel="stylesheet" src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   </head>
@@ -56,7 +55,7 @@ Description: This is my privacy page!
     </nav>
   </header>
 
-
+  <!-- Wrote random stuff for the terms sections and this is where it goes. -->
   <main class="flex-shrink-0">
     <div class="container">
       <h1 class="mt-5">Terms and Conditions</h1>
