--- a/src/client/create.html
+++ b/src/client/create.html
@@ -99,9 +99,7 @@ Description: This is my add page!
 			</div>
 
       <!-- Submit Button -->
-      <button type="submit" class="btn custom-btn">Add Animal
-          <i id="spinner" class="fa-duotone fa-solid fa-spinner fa-spin d-none"></i>
-      </button>
+      <button type="submit" id="submitBtn" class="btn custom-btn">Add Animal <i id="spinner" class="fa-duotone fa-solid fa-spinner fa-spin d-none"></i></button>
 
 		  </form>
 	  </div>
