--- a/src/client/search.html
+++ b/src/client/search.html
@@ -25,8 +25,7 @@ Description: This is my list page!
     <header>
       <nav class="navbar navbar-expand-md fixed-top custom-navbar ">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html"> 
-			    <i class="fa-solid fa-circle-dot"></i> Zookédex</a>
+          <a class="navbar-brand" href="index.html"><i class="fa-solid fa-circle-dot"></i> Zookédex</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -50,7 +49,6 @@ Description: This is my list page!
       </nav>
     </header>
 
-
     <!-- Begin page content -->
     <main class="flex-shrink-0">
       <div class="container">
@@ -68,7 +66,7 @@ Description: This is my list page!
           <th>Controls</th>
         </tr>
         </thead>
-        <tbody></tbody>
+          <tbody></tbody>
       </table>
       </div>
     </main>
@@ -102,7 +100,7 @@ Description: This is my list page!
       <p>&copy; <span id="copyright"></span> Alyssa Bhagwandin. &middot; <a href="privacy-policy.html">Privacy</a> &middot; <a href="terms.html">Terms</a></p>
     </footer>
     <!-- JavaScript Files. -->
-    <!-- Added this becuase the instructions said to put it at the bottom. -->
+    <!-- Added this because the instructions said to put it at the bottom. -->
     <script src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="app/app.js"></script>
     <script type="module" src="app/animals/create.js"></script>
