--- a/src/client/search.html
+++ b/src/client/search.html
@@ -56,8 +56,26 @@ Description: This is my list page!
       <p class="lead">Here will display all of the animals in your collection! </p>
       <div id="message-box" class="alert alert-info d-none">
         <i id="spinner-icon" class="fas fa-spinner fa-spin d-none"></i>
-    </div>
-    
+      </div>
+
+      <!-- Records per page dropdown -->
+      <div class="d-flex justify-content-end mb-3">
+      <div class="dropdown">
+        <button class="btn custom-btn - dropdown-toggle" type="button" id="perPageDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+            Records per page: <span id="selectedPerPage">5</span>
+        </button>
+        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="perPageDropdown">
+            <li><a class="dropdown-item per-page-option" href="#" data-value="5">5</a></li>
+            <li><a class="dropdown-item per-page-option" href="#" data-value="10">10</a></li>
+            <li><a class="dropdown-item per-page-option" href="#" data-value="15">15</a></li>
+            <li><a class="dropdown-item per-page-option" href="#" data-value="20">20</a></li>
+            <li><a class="dropdown-item per-page-option" href="#" data-value="25">25</a></li>
+            <li><a class="dropdown-item per-page-option" href="#" data-value="50">50</a></li>
+            <li><a class="dropdown-item per-page-option" href="#" data-value="100">100</a></li>
+          </ul>
+      </div>
+      </div>
+
       <table id="animals-list" class="table table-striped table-hover d-none">
         <thead>
         <tr>
