All of my final changes for lab 3

--- a/src/client/create.html
+++ b/src/client/create.html
@@ -97,7 +97,7 @@ Description: This is my product creation page!
       </div>
 
       <!-- Submit Button -->
-      <button type="submit" class="btn btn-primary">Add Product</button>
+      <button id="submitBtn" type="submitBtn" class="btn btn-primary">Add Product</button>
     </form>
   </main>
 
